# imgsel-x11

./: .gitmodules
docs/: QA.rmd  README.rmd  compiling.md
src/: CMakeLists.txt  main.cpp
src/cmake/: FindImlib2.cmake
src/config/: Config.h  ConfigBuilder.h  ConfigManager.cpp  ConfigManager.h
src/exceptions/: ImageNotLoadable.h
src/gui/: ImagePickerDrawer.cpp  ImagePickerDrawer.h  Shape.h  WindowManager.cpp  WindowManager.h
src/gui/drawer/: ImageDrawer.cpp  ImageDrawer.h  RectangleShapeDrawer.cpp  ShapeDrawer.h  ShapeDrawerFactory.cpp  ShapeDrawerFactory.h
src/image/: image.h
src/input/: InstructionRouter.cpp  InstructionRouter.h  XEventWrapper.h  XInputHandler.cpp  XInputHandler.h  x11_keycodes.cpp  x11_keycodes.h
src/input/handler/: InputHandler.cpp  InputHandler.h  InputHandlerFactory.cpp  InputMode.h  SelectionInputHandler.cpp  SelectionInputHandler.h
src/input/handler/filters/: FilteringInputHandler.cpp  FilteringInputHandler.h  KeyFilteringInputHandler.cpp  KeyFilteringInputHandler.h  TextFilteringInputHandler.cpp  TextFilteringInputHandler.h
src/input/handler/instruction/: CopyInstruction.h  FilterInstruction.h  InputInstruction.h  InputInstructionType.h  InstructionType.h  ModeChangeInstruction.h  MoveInstruction.h
src/lib/keycode/: CMakeLists.txt  keycode.h
src/util/: ThreadSafeQueue.h  helpers.cpp  helpers.h
